--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "babel-plugin-module-alias",
-  "version": "1.6.1",
+  "name": "babel-plugin-module-alias-rn",
+  "version": "0.0.1",
   "main": "lib/index.js",
   "description": "Babel plugin to rewrite the path in require() and ES6 import",
   "repository": {
     "type": "git",
-    "url": "https://github.com/tleunen/babel-plugin-module-alias.git"
+    "url": "https://github.com/ghepesdoru/babel-plugin-module-alias-rn.git"
   },
   "author": {
-    "name": "Tommy Leunen",
-    "email": "tommy.leunen@gmail.com",
-    "url": "http://tommyleunen.com"
+    "name": "Ghepes Doru",
+    "email": "ghepesdoru@yahoo.com"
   },
   "license": "MIT",
   "keywords": [
